--- a/index.html
+++ b/index.html
@@ -658,20 +658,20 @@
                           <li class="item item-animate wide-first">
                             <div class="item-inner">
                               <div class="item-img">
-                                <div class="item-img-info"><a href="#" title="Reiki Guarda Corpo" class="product-image"><img src="./images/env/casa_1.jpg" alt="Reiki Guarda Corpo"></a>
+                                <div class="item-img-info"><a href="https://allianceglass.com.br/site/product/envidracamento-casa-cotacao/" title="Reiki Guarda Corpo" class="product-image"><img src="./images/env/casa_1.jpg" alt="Reiki Guarda Corpo"></a>
                                   <div class="rating">
                                     <div class="ratings">
                                       <div class="rating-box">
                                         <div class="rating" style="width:80%"></div>
                                       </div>
-                                      <p class="rating-links"><a href="#">1 Review(s)</a> <span class="separator">|</span> <a href="#">Add Review</a> </p>
+                                      <p class="rating-links"><a href="https://allianceglass.com.br/site/product/envidracamento-casa-cotacao//">1 Review(s)</a> <span class="separator">|</span> <a href="https://allianceglass.com.br/site/product/envidracamento-comercial-cotacao/">Add Review</a> </p>
                                     </div>
                                   </div>
                                 </div>
                               </div>
                               <div class="item-info">
                                 <div class="info-inner">
-                                  <div class="item-title"><a href="#" title="Retis lapen casen">Envidraçamento - Casa</a> </div>
+                                  <div class="item-title"><a href="https://allianceglass.com.br/site/product/envidracamento-casa-cotacao/" title="Retis lapen casen">Envidraçamento - Casa</a> </div>
                                 </div>
                               </div>
                             </div>
@@ -679,20 +679,20 @@
                           <li class="item item-animate wide-first">
                             <div class="item-inner">
                               <div class="item-img">
-                                <div class="item-img-info"><a href="#" title="Reiki Guarda Corpo" class="product-image"><img src="./images/env/apto_1.jpg" alt="Reiki Guarda Corpo"></a>
+                                <div class="item-img-info"><a href="https://allianceglass.com.br/site/product/envidracamento-apartamento-cotacao" title="Reiki Guarda Corpo" class="product-image"><img src="./images/env/apto_1.jpg" alt="Reiki Guarda Corpo"></a>
                                   <div class="rating">
                                     <div class="ratings">
                                       <div class="rating-box">
                                         <div class="rating" style="width:80%"></div>
                                       </div>
-                                      <p class="rating-links"><a href="#">1 Review(s)</a> <span class="separator">|</span> <a href="#">Add Review</a> </p>
+                                      <p class="rating-links"><a href="https://allianceglass.com.br/site/product/envidracamento-apartamento-cotacao/">1 Review(s)</a> <span class="separator">|</span> <a href="https://allianceglass.com.br/site/product/envidracamento-apartamento-cotacao/">Add Review</a> </p>
                                     </div>
                                   </div>
                                 </div>
                               </div>
                               <div class="item-info">
                                 <div class="info-inner">
-                                  <div class="item-title"><a href="#" title="Retis lapen casen">Envidraçamento - Apartamento</a> </div>
+                                  <div class="item-title"><a href="https://allianceglass.com.br/site/product/envidracamento-apartamento-cotacao/" title="Retis lapen casen">Envidraçamento - Apartamento</a> </div>
                                 </div>
                               </div>
                             </div>
@@ -700,20 +700,20 @@
                           <li class="item item-animate wide-first">
                             <div class="item-inner">
                               <div class="item-img">
-                                <div class="item-img-info"><a href="#" title="Reiki Guarda Corpo" class="product-image"><img src="./images/env/com_1.jpg" alt="Reiki Guarda Corpo"></a>
+                                <div class="item-img-info"><a href="https://allianceglass.com.br/site/product/envidracamento-comercial-cotacao/" title="Reiki Guarda Corpo" class="product-image"><img src="./images/env/com_1.jpg" alt="Reiki Guarda Corpo"></a>
                                   <div class="rating">
                                     <div class="ratings">
                                       <div class="rating-box">
                                         <div class="rating" style="width:80%"></div>
                                       </div>
-                                      <p class="rating-links"><a href="#">1 Review(s)</a> <span class="separator">|</span> <a href="#">Add Review</a> </p>
+                                      <p class="rating-links"><a href="https://allianceglass.com.br/site/product/envidracamento-comercial-cotacao/">1 Review(s)</a> <span class="separator">|</span> <a href="#">Add Review</a> </p>
                                     </div>
                                   </div>
                                 </div>
                               </div>
                               <div class="item-info">
                                 <div class="info-inner">
-                                  <div class="item-title"><a href="#" title="Retis lapen casen">Envidraçamento - Comercial</a> </div>
+                                  <div class="item-title"><a href="https://allianceglass.com.br/site/product/envidracamento-comercial-cotacao/" title="Retis lapen casen">Envidraçamento - Comercial</a> </div>
                                 </div>
                               </div>
                             </div>
@@ -800,7 +800,7 @@
                           <li class="item item-animate wide-first">
                             <div class="item-inner">
                               <div class="item-img">
-                                <div class="item-img-info"><a href="#" title="Box Blindex" class="product-image"><img src="./images/cover/cv_resi_1.jpg" alt="Box Blindex"></a>
+                                <div class="item-img-info"><a href="https://allianceglass.com.br/site/product/cobertura-residencial-cotacao/" title="Box Blindex" class="product-image"><img src="./images/cover/cv_resi_1.jpg" alt="Box Blindex"></a>
                                       <div class="actions">
                                     <div class="quick-view-btn"><a href="#" data-toggle="tooltip" data-placement="right" title="" data-original-title="Quick View"> <span>Quick View</span></a></div>
                                     <div class="link-wishlist"><a href="#" data-toggle="tooltip" data-placement="right" title="" data-original-title="Wishlist"><span>Add to Wishlist</span></a></div>
@@ -814,14 +814,14 @@
                                       <div class="rating-box">
                                         <div class="rating" style="width:80%"></div>
                                       </div>
-                                      <p class="rating-links"><a href="#">1 Review(s)</a> <span class="separator">|</span> <a href="#">Add Review</a> </p>
+                                      <p class="rating-links"><a href="https://allianceglass.com.br/site/product/cobertura-residencial-cotacao/">1 Review(s)</a> <span class="separator">|</span> <a href="https://allianceglass.com.br/site/product/cobertura-residencial-cotacao/">Add Review</a> </p>
                                     </div>
                                   </div>
                                 </div>
                               </div>
                               <div class="item-info">
                                 <div class="info-inner">
-                                  <div class="item-title"><a href="#" title="Box Blindex">Residencial</a> </div>
+                                  <div class="item-title"><a href="https://allianceglass.com.br/site/product/cobertura-residencial-cotacao/" title="Box Blindex">Residencial</a> </div>
                                 </div>
                               </div>
                             </div>
@@ -830,7 +830,7 @@
                           <li class="item item-animate wide-first">
                             <div class="item-inner">
                               <div class="item-img">
-                                <div class="item-img-info"><a href="#" title="Box Blindex" class="product-image"><img src="./images/cover/cv_com_1.jpg" alt="Box Blindex"></a>
+                                <div class="item-img-info"><a href="https://allianceglass.com.br/site/product/cobertura-comercial-cotacao/" title="Box Blindex" class="product-image"><img src="./images/cover/cv_com_1.jpg" alt="Box Blindex"></a>
                                       <div class="actions">
                                     <div class="quick-view-btn"><a href="#" data-toggle="tooltip" data-placement="right" title="" data-original-title="Quick View"> <span>Quick View</span></a></div>
                                     <div class="link-wishlist"><a href="#" data-toggle="tooltip" data-placement="right" title="" data-original-title="Wishlist"><span>Add to Wishlist</span></a></div>
@@ -844,14 +844,14 @@
                                       <div class="rating-box">
                                         <div class="rating" style="width:80%"></div>
                                       </div>
-                                      <p class="rating-links"><a href="#">1 Review(s)</a> <span class="separator">|</span> <a href="#">Add Review</a> </p>
+                                      <p class="rating-links"><a href="https://allianceglass.com.br/site/product/cobertura-comercial-cotacao/">1 Review(s)</a> <span class="separator">|</span> <a href="https://allianceglass.com.br/site/product/cobertura-comercial-cotacao/">Add Review</a> </p>
                                     </div>
                                   </div>
                                 </div>
                               </div>
                               <div class="item-info">
                                 <div class="info-inner">
-                                  <div class="item-title"><a href="#" title="Box Blindex">Comercial</a> </div>
+                                  <div class="item-title"><a href="https://allianceglass.com.br/site/product/cobertura-comercial-cotacao/" title="Box Blindex">Comercial</a> </div>
                                 </div>
                               </div>
                             </div>
